# coerce_pattern

./: Cargo.toml  README.md
src/: lib.rs
